--- a/n02-redux-and-router-v6/package.json
+++ b/n02-redux-and-router-v6/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r20221105_ts_redux",
+  "name": "n02-redux-and-router-v6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
