--- a/n03-rxjs/package.json
+++ b/n03-rxjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r20221105_ts_redux",
+  "name": "react-rxjs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,9 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "rxjs": "7.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
