--- a/n03-rxjs/package.json
+++ b/n03-rxjs/package.json
@@ -13,13 +13,14 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-location": "^3.7.4",
     "axios": "^1.1.3",
+    "fast-deep-equal": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.55.0",
-    "rxjs": "7.5.7"
+    "rxjs": "7.5.7",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
