--- a/n03-rxjs/package.json
+++ b/n03-rxjs/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "rfdc": "^1.3.0",
     "rxjs": "7.5.7",
     "sass": "^1.55.0"
   },
