--- a/n03-rxjs/package.json
+++ b/n03-rxjs/package.json
@@ -29,6 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "vite-plugin-svgr": "^2.2.2"
   }
 }
