--- a/n04-mui/.eslintrc.json
+++ b/n04-mui/.eslintrc.json
@@ -29,6 +29,7 @@
     ],
     "rules": {
       "react/react-in-jsx-scope": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/no-unknown-property": ["error", { "ignore": ["css"] }]
     }
   }
