--- a/n04-mui/package.json
+++ b/n04-mui/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview",
     "eslint": "eslint . --ext .js,.ts,.jsx,.tsx --fix",
     "prettier": "prettier --write .",
-    "lint": "npm run eslint && npm run prettier"
+    "lint": "npm run eslint && npm run prettier",
+    "stylelint": "stylelint --ignore-path .gitignore \"src/**/*.+(css|ts|tsx)\"",
+    "stylelintfix": "npm run stylelint -- --fix",
+    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx|css)\""
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -30,6 +33,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -41,6 +45,11 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.0",
+    "stylelint": "^14.16.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-prettier": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vite-plugin-svgr": "^2.2.2"
