--- a/n04-mui/tsconfig.json
+++ b/n04-mui/tsconfig.json
@@ -18,7 +18,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
   },
-  "include": ["src"],
+  "include": ["src", "jest.setup.js"],
   "exclude": ["node_modules"],
   "extends": "./tsconfig.paths.json"
 }
