--- a/n04-mui/package.json
+++ b/n04-mui/package.json
@@ -2,6 +2,7 @@
   "name": "n04-mui",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
