ject on vite alias

--- a/n04-mui/jest.config.json
+++ b/n04-mui/jest.config.json
@@ -10,5 +10,9 @@
     "^.+\\.(ts|tsx)$": "ts-jest"
   },
   "testEnvironment": "jest-environment-jsdom",
-  "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"]
+  "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
+  "moduleNameMapper": {
+    "^@/(.*)$": "<rootDir>/src/$1",
+    "^components/(.*)$": "<rootDir>/src/components/$1"
+  }
 }
