--- a/s01-storybook/jest.config.json
+++ b/s01-storybook/jest.config.json
@@ -1,7 +1,5 @@
 {
-  "roots": [
-    "<rootDir>/src"
-  ],
+  "roots": ["<rootDir>/src"],
   "testMatch": [
     "**/__tests__/**/*.+(ts|tsx|js)",
     "**/?(*.)+(spec|test).+(ts|tsx|js)"
