--- a/s01-storybook/package.json
+++ b/s01-storybook/package.json
@@ -19,6 +19,7 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
@@ -26,6 +27,7 @@
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
     "@reduxjs/toolkit": "^1.9.1",
+    "esbuild": "^0.16.4",
     "hygen": "^6.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
