--- a/n03-rxjs/package.json
+++ b/n03-rxjs/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-location": "^3.7.4",
     "axios": "^1.1.3",
+    "base-64": "^1.0.0",
     "fast-deep-equal": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/react-router-dom": "^5.3.3",
